# GLMOCR_GUI

./: .gitignore  README.md  main.py  pyproject.toml  启动.bat  启动命令.txt
config/: default_config.yaml
core/: config_manager.py  file_validator.py  recognizer.py  settings.json  settings_manager.py
ui/: drop_area.py  main_window.py  result_viewer.py
utils/: image_utils.py  latex_renderer.py
